--- a/index.html
+++ b/index.html
@@ -1,1 +1,230 @@
-Returning Soon!
+<html>
+<head>
+  <title>Brian Lam</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+</head>
+<body>
+  <div class="navbar navbar-fixed-top navbar-inverse">
+    <ul class="nav">
+      <li>
+        <a href="#about">
+          <span class="hide-xs">About Me</span>
+          <span class="glyphicon glyphicon-user show-xs icon-med"></span>
+        </a>
+      </li>
+      <li>
+        <a href="#experience">
+          <span class="hide-xs">Experience</span>
+          <span class="glyphicon glyphicon-briefcase show-xs icon-med"></span>
+        </a>
+      </li>
+      <li>
+        <a href="#education">
+          <span class="hide-xs">Education</span>
+          <span class="glyphicon glyphicon-file show-xs icon-med"></span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="section header fixed-top back" id="title">
+    <div class="container">
+      <div class="row">
+        <div class="jumbotron title-box">
+          <p class="name">Brian Lam</p>
+          <p class="subtitle">Software Developer | 
+          <a class="mail" href="mailto:brianlam93@gmail.com">brianlam@cs.stanford.edu</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <span class="anchor" id="about"></span>
+  <div class="section about">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 subheader">
+          <p>
+            About Me
+            <span class="glyphicon glyphicon-user"></span>
+          </p>
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class=>Hi! I'm Brian Lam, and I am a fourth-year at Stanford University pursuing a B.S. in Computer Science with a concentration in Systems. In addition to being a full-time student, I am a section leader for CS 106, the introductory CS course sequence at Stanford. I am most experienced with building web applications, working on both the front and back-end.</p>
+        </div>
+        <div class="col-md-3 center">
+          <img class="img-circle med-icon" src="img/profile_pic.jpg"/>
+        </div>
+      </div>
+    </div>
+  </div>
+  <span class="anchor" id="experience"></span>
+  <div class="section experience">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 subheader">
+          <p>Experience <span class="glyphicon glyphicon-briefcase"></span></p>
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class="bold">Software Engineering Intern</p>
+          <p class="italics">Zendesk Inc.</p>
+          <p>At Zendesk, I am part of the Net Promoter Score feature development team. I built a client-side validation framework and live content editor to allow clients to correct malformed uploaded data. My current project involves building an NLP engine to surface primary topics from reviews submitted by the end-users of our clients.</p>
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">June 2014 - Present</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 subheader">
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class="bold">Software Engineering Consultant</p>
+          <p class="italics">BrightSky Labs Inc. <a href=">http://www.brightsky.co/">http://www.brightsky.co</a></p>
+          <p>I am a part of the core engineering team, working primarily on iOS development.</p>
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">June 2014 - Present</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 subheader">
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class="bold">CS 106A Section Leader</p>
+          <p class="italics">Stanford CS198 Section Leading Program</p>
+          <p> As a section leader, I lead a weekly one-hour problem session with a group of 10-12 students. I also grade their programming projects, after which I hold one-on-one interactive grading sessions for code review and discussion of course topics along with code style and functionality.</p>
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">January 2014 - Present</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 col-md-offset-2 col-sm-9">
+          <p class="bold">Platform Engineering Intern</p>
+          <p class="italics">StubHub! / eBay Inc.</p>
+          <p>
+            While with Stubhub, I built a fully functional Developer Environment Virtual Machine (DevVM). This project streamlined initial environment setup for all developers and moved Development closer to the Quality Engineering and Production environments.
+          </p>
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">June 2013 - Sept. 2013</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 col-md-offset-2 col-sm-9">
+          <p class="bold">Research Assistant &amp; Project Manager</p>
+          <p class="italics">Political Psychology Research Group [PPRG]</p>
+          <p> During my year with PPRG, I worked on many projects, including:</p>
+          <ul>
+            <li>Compiling and analyzing existing literature on the effect of pre-election polling on the outcome of national elections; my work was incorporated into the course Running Time: Running and Winning Elections (POLISCI 229R)</li>
+            <li>Analyzing experimental survey data to measure the legitimacy of survey responses based on response characteristics.</li>
+            <li>Structured raw survey data collected by the American National Election Studies and developed scripting tools to streamline the analysis of these datasets.</li>
+          </ul>
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">Sept. 2011 - Sept. 2012</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 subheader">
+          <p>Groups</span></p>
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class="bold">Web Developer &amp; Webmaster</p>
+          <p class="italics">DreamCatchers Youth Organization</p>
+          <p>DreamCatchers Youth Organization is an extracurricular afterschool program that aims to improve the academic futures for low-income youth by creating a community between local partners, college student tutors, and families. </p>
+          <p>This quarter, I will be redesigning DreamCatchers' website on a responsive framework to improve cross-platform viewability. </p>
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">January 2014 - Present</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 col-md-offset-2 col-sm-9">
+          <p class="bold">E-Challenge Team Officer</p>
+          <p class="italics">Business Association of Stanford Entrepreneurial Students [BASES]</p>
+          <p>The main objective of the BASES E-Challenge team is putting on the group's annual startup competition for Stanford-affiliated companies and products. On this team, my primary responsibilities included maintaining contact with and briefing competitors over the two-month competition period and coordinating with industry professionals and companies to serve as or provide judges for the event. </p>
+
+        </div>
+        <div class="col-md-3 job-interval">
+          <p class="job_time">October 2012 - June 2013</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 subheader">
+          <p>Skills <span class="glyphicon glyphicon-tasks"></span></p>
+        </div>
+        <div class="col-md-10 col-sm-10">
+          <p>Experience with JavaScript (jQuery, Ember.js), Ruby/Ruby on Rails, HTML/CSS (Bootstrap/Foundation) 
+</p>
+          <p>Coursework with Java, C++, Python, SQL, Objective-C</p>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <span class="anchor" id="education"></span>
+  <div class="section education">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 subheader">
+          <p>Education <span class="glyphicon glyphicon-file"></span></p>
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class="bold">Stanford University</p>
+          <p class="italics">Bachelor's of Science in Computer Science</p>
+          <p>Current GPA: 3.40</p>
+          <div class="row">
+            <div class="col-md-6">
+              <p class="list_header">Relevant Coursework</p>
+              <ul class="class_list">
+                <li>Web Applications</li>
+                <li>Natural Language Processing</li>
+                <li>Object Oriented Programming</li>
+                <li>Principles of Computer Systems</li>
+                <li>Programming Methodology</li>
+                <li>Computer Organization and Systems</li>
+                <li>Mathematical Foundations of Computing</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <p class="list_header">Planned Courses</p>
+              <ul class="class_list">
+                <li>Probability for Computer Scientists</li>
+                <li>Human-Computer Interaction Design </li>
+                <li>Database Principles</li>
+                <li>Teaching Computer Science </li>
+                <li>Compilers</li>
+                <li>Algorithms</li>       
+              </ul>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-3 job-interval">
+          <p>Expected June 2015</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer center">
+    <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+      <p><a href="mailto:brianlam@cs.stanford.edu">brianlam@cs.stanford.edu</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+</body>
+</html>
