creating new resume

--- a/index.html
+++ b/index.html
@@ -3,47 +3,22 @@
   <title>Brian Lam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="navbar navbar-fixed-top navbar-inverse">
-    <ul class="nav">
-      <li>
-        <a href="#about">
-          <span class="hide-xs">About Me</span>
-          <span class="glyphicon glyphicon-user show-xs icon-med"></span>
-        </a>
-      </li>
-      <li>
-        <a href="#experience">
-          <span class="hide-xs">Experience</span>
-          <span class="glyphicon glyphicon-briefcase show-xs icon-med"></span>
-        </a>
-      </li>
-      <li>
-        <a href="#education">
-          <span class="hide-xs">Education</span>
-          <span class="glyphicon glyphicon-file show-xs icon-med"></span>
-        </a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="section header fixed-top back" id="title">
+  <div class="section header" id="title">
     <div class="container">
       <div class="row">
         <div class="jumbotron title-box">
-          <p class="name">Brian Lam</p>
+          <p class="header">Brian Lam</p>
           <p class="subtitle">Software Developer | 
-          <a class="mail" href="mailto:brianlam93@gmail.com">brianlam@cs.stanford.edu</a></p>
+          <a class="mail" href="mailto:brianlam@cs.stanford.edu">brianlam@cs.stanford.edu</a></p>
         </div>
       </div>
     </div>
   </div>
 
-  <span class="anchor" id="about"></span>
   <div class="section about">
     <div class="container">
       <div class="row">
@@ -62,7 +37,49 @@
       </div>
     </div>
   </div>
-  <span class="anchor" id="experience"></span>
+  <div class="section education">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 subheader">
+          <p>Education <span class="glyphicon glyphicon-file"></span></p>
+        </div>
+        <div class="col-md-7 col-sm-9">
+          <p class="bold">Stanford University</p>
+          <p class="italics">Bachelor's of Science in Computer Science</p>
+          <p>Current GPA: 3.40</p>
+          <div class="row">
+            <div class="col-md-6">
+              <p class="list_header">Relevant Coursework</p>
+              <ul class="class_list">
+                <li>Web Applications</li>
+                <li>Natural Language Processing</li>
+                <li>Object Oriented Programming</li>
+                <li>Principles of Computer Systems</li>
+                <li>Programming Methodology</li>
+                <li>Computer Organization and Systems</li>
+                <li>Mathematical Foundations of Computing</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <p class="list_header">Planned Courses</p>
+              <ul class="class_list">
+                <li>Probability for Computer Scientists</li>
+                <li>Human-Computer Interaction Design </li>
+                <li>Database Principles</li>
+                <li>Teaching Computer Science </li>
+                <li>Compilers</li>
+                <li>Algorithms</li>       
+              </ul>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-3 job-interval">
+          <p>Expected June 2015</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="section experience">
     <div class="container">
       <div class="row">
@@ -166,50 +183,6 @@
         </div>
       </div>
 
-    </div>
-  </div>
-  <span class="anchor" id="education"></span>
-  <div class="section education">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 subheader">
-          <p>Education <span class="glyphicon glyphicon-file"></span></p>
-        </div>
-        <div class="col-md-7 col-sm-9">
-          <p class="bold">Stanford University</p>
-          <p class="italics">Bachelor's of Science in Computer Science</p>
-          <p>Current GPA: 3.40</p>
-          <div class="row">
-            <div class="col-md-6">
-              <p class="list_header">Relevant Coursework</p>
-              <ul class="class_list">
-                <li>Web Applications</li>
-                <li>Natural Language Processing</li>
-                <li>Object Oriented Programming</li>
-                <li>Principles of Computer Systems</li>
-                <li>Programming Methodology</li>
-                <li>Computer Organization and Systems</li>
-                <li>Mathematical Foundations of Computing</li>
-              </ul>
-            </div>
-            <div class="col-md-6">
-              <p class="list_header">Planned Courses</p>
-              <ul class="class_list">
-                <li>Probability for Computer Scientists</li>
-                <li>Human-Computer Interaction Design </li>
-                <li>Database Principles</li>
-                <li>Teaching Computer Science </li>
-                <li>Compilers</li>
-                <li>Algorithms</li>       
-              </ul>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-md-3 job-interval">
-          <p>Expected June 2015</p>
-        </div>
-      </div>
     </div>
   </div>
   <div class="footer center">
