--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ---
-layout: home-index
+layout: plain
 ---
+<div>
+  Hi, I'm Brian Lam. I am a software engineer at Facebook. Previously, I was a
+  student at Stanford University. I live and work in San Francisco. I am not
+  actively looking for new work now, but you can find my resume
+  <a href="/me/resume.pdf">here</a>.
 
-<div class="home">
+  I write some stuff <a href="/blog">here</a>.
 </div>
+
+
+
+
