changing intro message

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 ---
 layout: plain
 ---
-<div>
+<p>
   Hi, I'm Brian Lam. I am a software engineer at Facebook. Previously, I was a
-  student at Stanford University. I live and work in San Francisco. I am not
-  actively looking for new work now, but you can find my resume
-  <a href="/me/resume.pdf">here</a>.
-
-  I write some stuff <a href="/blog">here</a>.
-</div>
-
-
-
-
+  student at Stanford University, where I received my Bachelor's Degree in
+  Computer Science. I am not actively looking for new work now, but you can find
+  my resume <a href="/me">here</a>.
+</p>
+<p>
+  I live and work in San Francisco. In my free time, I like cooking, trying out
+  new restaurants, drinking coffee, and thinking about whether I'm an introvert or
+  just sleepy. I have also picked up climbing.
+</p>
+<p>
+  I write about some of my side projects <a href="/blog">here</a>.
+</p>
