change hyperlink in intro

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: plain
 <p>
   Hi, I'm Brian Lam. I am a software engineer at Facebook. Previously, I was a
   student at Stanford University, where I received my Bachelor's Degree in
-  Computer Science. I am not actively looking for new work now, but you can find
-  my resume <a href="/me">here</a>.
+  Computer Science. I am not actively looking for new work now, but this is
+  <a href="/me">my résumé</a>.
 </p>
 <p>
   I live and work in San Francisco. In my free time, I like cooking, trying out
