--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 layout: default
 ---
 <p>
-  Hi, I'm Brian Lam. I am a software engineer at Facebook. Previously, I was a
+  Hi, I'm Brian Lam. I am a software engineer at Instagram. I previously worked
+  on Ads Infrastructure, also at Facebook. Before that, I was a
   student at Stanford University, where I received my Bachelor's Degree in
-  Computer Science. I am not actively looking for new work now, but this is
+  Computer Science (and left before completing my Master's Degree in Computer Science).
+  I am not actively looking for new work now, but this is
   <a href="/me">my résumé</a>.
 </p>
 <p>
