--- a/me/index.html
+++ b/me/index.html
@@ -4,6 +4,6 @@ layout: plain
 <embed
   width="100%"
   height="100%"
-  src="http://www.brianlam.io/me/resume.pdf"
+  src="resume.pdf"
   type="application/pdf"
  >
