remove unnecessary css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <p>
   Hi, I'm Brian Lam. I am a software engineer at Instagram. I previously worked
-  on Ads Infrastructure, also at Facebook. Before that, I was a
+  on Facebook's Ads products. Before that, I was a
   student at Stanford University, where I received my Bachelor's Degree in
   Computer Science (and left before completing my Master's Degree in Computer Science).
   I am not actively looking for new work now, but this is
@@ -11,8 +11,9 @@ layout: default
 </p>
 <p>
   I live and work in San Francisco. In my free time, I like cooking, trying out
-  new restaurants, drinking coffee, and thinking about whether I'm an introvert or
-  just sleepy. I have also picked up climbing.
+  new restaurants, drinking coffee, making cocktails for friends at home, and
+  thinking about whether I am once and for all an introvert or just sleepy. I
+  have also picked up climbing.
 </p>
 <p>
   I write about some of my side projects <a href="/blog">here</a>.
