--- a/photos/index.html
+++ b/photos/index.html
@@ -3,7 +3,7 @@ layout: plain
 ---
 <div class="photos-container">
  {% assign sorted = (site.selected_photos | sort: 'date') | reverse %}
- {% for photo in site.selected_photos %}
+ {% for photo in sorted %}
    <div class="selected-photo-container">
       <img class="selected-photo" src="{{photo.img_link}}" alt="{{photo.alt_text}}"/>
     </div>
