refresh cache of icons

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Brian Lam -- personal portfolio" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="icon" href="%PUBLIC_URL%/page-favicon.ico" />
         <title>Brian Lam //</title>
     </head>
     <body>
